# goose

./: .gitignore  AGENTS.md  BUILDING_LINUX.md  CONTRIBUTING.md  CUSTOM_DISTROS.md  Cargo.toml  Justfile  README.md  RELEASE_CHECKLIST.md  deny.toml  flake.nix  goose-self-test.yaml
crates/goose/: Cargo.toml  acp-meta.json  acp-schema.json
crates/goose-download-manager/: Cargo.toml
crates/goose-local-inference/: Cargo.toml
crates/goose-local-inference/src/: backend.rs  config_resolver.rs  hf_models.rs  huggingface_auth.rs  lib.rs  local_model_registry.rs  management.rs  mlx.rs  multimodal.rs  native_tool_parsing.rs  prompt_template.rs  provider_utils.rs  thinking_output.rs  tool_emulation.rs
crates/goose-local-inference/src/llamacpp/: inference_emulated_tools.rs  inference_engine.rs  inference_native_tools.rs  mod.rs
crates/goose-server/: Cargo.toml
crates/goose-server/src/: auth.rs  lib.rs  main.rs  openapi.rs  session_event_bus.rs  state.rs  tls.rs
crates/goose-server/src/commands/: agent.rs
crates/goose-server/src/routes/: agent.rs  config_management.rs  dictation.rs  errors.rs  local_inference.rs  mod.rs  recipe.rs  reply.rs  sampling.rs  schedule.rs  session.rs  session_events.rs  status.rs  tunnel.rs  utils.rs
crates/goose-server/src/tunnel/: mod.rs
crates/goose-server/ui/desktop/: openapi.json
crates/goose/examples/: agent.rs  databricks_oauth.rs  image_tool.rs
crates/goose/src/: action_required_manager.rs  doctor.rs  download_manager.rs  lib.rs  logging.rs  model.rs  model_config.rs  posthog.rs  prompt_template.rs  scheduler.rs  session_context.rs  sources.rs  tool_inspection.rs  utils.rs
crates/goose/src/acp/: common.rs  fs.rs  mcp_app_proxy.rs  mod.rs  provider.rs  response_builder.rs  server.rs  server_factory.rs
crates/goose/src/acp/server/: agent_mentions.rs  agent_requests.rs  apps.rs  config.rs  custom_dispatch.rs  diagnostics.rs  dictation.rs  dispatch.rs  elicitation.rs  extensions.rs  fork_session.rs  list_sessions.rs  load_session.rs  local_inference.rs  manage_sessions.rs  new_session.rs  onboarding.rs  prompts.rs  providers.rs  recipe.rs  resources.rs  schedule.rs  secrets.rs  sessions.rs  slash_commands.rs  sources.rs  tool_notifications.rs  tools.rs
crates/goose/src/acp/templates/: mcp_app_proxy.html
crates/goose/src/acp/transport/: mod.rs  tls.rs
crates/goose/src/agents/: agent.rs  execute_commands.rs  extension.rs  extension_manager.rs  final_output_tool.rs  mcp_client.rs  mod.rs  moim.rs  prompt_manager.rs  reply_parts.rs  retry.rs  schedule_tool.rs  subagent_handler.rs  subagent_task_config.rs  tool_execution.rs
crates/goose/src/agents/platform_extensions/: apps.rs  chatrecall.rs  code_execution.rs  mod.rs  orchestrator.rs  skills.rs  summarize.rs  summon.rs
crates/goose/src/agents/snapshots/: goose__agents__prompt_manager__tests__all_platform_extensions.snap  goose__agents__prompt_manager__tests__basic.snap  goose__agents__prompt_manager__tests__one_extension.snap  goose__agents__prompt_manager__tests__typical_setup.snap
crates/goose/src/checks/: mod.rs
crates/goose/src/config/: base.rs  declarative_providers.rs  extensions.rs  goose_mode.rs  migrations.rs  mod.rs  providers.rs  tls.rs
crates/goose/src/config/signup_nanogpt/: mod.rs
crates/goose/src/context_mgmt/: mod.rs
crates/goose/src/conversation/: message.rs
crates/goose/src/dictation/: providers.rs
crates/goose/src/execution/: manager.rs
crates/goose/src/gateway/: handler.rs  telegram.rs
crates/goose/src/goose_apps/: app.rs  cache.rs  mod.rs
crates/goose/src/hints/: load_hints.rs  mod.rs
crates/goose/src/hooks/: mod.rs
crates/goose/src/otel/: otlp.rs
crates/goose/src/permission/: permission_inspector.rs  permission_judge.rs
crates/goose/src/plugins/: discovery.rs  mod.rs
crates/goose/src/plugins/formats/: gemini.rs  mod.rs  open_plugins.rs
crates/goose/src/prompts/: session_name.md
crates/goose/src/providers/: amp_acp.rs  anthropic.rs  anthropic_def.rs  avian.rs  azure.rs  base.rs  bedrock.rs  chatgpt_codex.rs  claude_acp.rs  claude_code.rs  cli_common.rs  codex.rs  codex_acp.rs  copilot_acp.rs  cursor_agent.rs  custom_provider_config.rs  databricks.rs  databricks_def.rs  databricks_v2.rs  databricks_v2_def.rs  errors.rs  gcpvertexai.rs  gemini_acp.rs  gemini_cli.rs  gemini_oauth.rs  githubcopilot.rs  google.rs  google_def.rs  huggingface.rs  init.rs  kimicode.rs  litellm.rs  local_inference.rs  mod.rs  nanogpt.rs  ollama.rs  ollama_cloud.rs  ollama_def.rs  openai.rs  openai_compatible.rs  (+16 more)
crates/goose/src/providers/canonical/: name_builder.rs
crates/goose/src/providers/declarative/: iflytek.json  kimi.json  lmstudio.json  moonshot.json  tanzu.json  zhipu.json
crates/goose/src/providers/formats/: anthropic.rs  bedrock.rs  databricks.rs  gcpvertexai.rs  google.rs  mod.rs  openai.rs  openai_responses.rs  openrouter.rs  snowflake.rs
crates/goose/src/recipe/: manifest.rs  mod.rs  recipe_extension_adapter.rs
crates/goose/src/security/: adversary_inspector.rs  mod.rs  patterns.rs  scanner.rs  security_inspector.rs
crates/goose/src/session/: chat_history_search.rs  diagnostics.rs  legacy.rs  mod.rs  session_manager.rs  session_naming.rs  thread_manager.rs
crates/goose/src/skills/: client.rs  mod.rs
crates/goose/src/slash_commands/: recipe_slash_command.rs  skill_slash_command.rs  slash_command.rs  types.rs
crates/goose/tests/: acp_custom_provider_methods_test.rs  acp_custom_requests_test.rs  acp_fork_session_test.rs  acp_secret_cache_invalidation_test.rs  acp_server_test.rs  acp_transport_auth_test.rs  adversary_inspector_tests.rs  agent.rs  compaction.rs  local_inference_integration.rs  local_inference_perf.rs  mcp_integration_test.rs  providers.rs  session_id_propagation_test.rs  tetrate_streaming.rs
crates/goose/tests/acp_common_tests/: mod.rs
crates/goose/tests/acp_fixtures/: mod.rs  provider.rs  server.rs
crates/goose/tests/mcp_replays/: github-mcp-serverstdio  npx-y@modelcontextprotocol_server-everything@2026.1.14  uvrun--withfastmcp==2.14.4fastmcpruntests_fastmcp_test_server.py  uvxmcp-server-fetch
(+1042 files in other folders)
