[package]
name = "goose-download-manager"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
once_cell = { workspace = true }
reqwest = { workspace = true, features = ["stream"] }
serde = { workspace = true }
tokio = { workspace = true, features = ["fs", "io-util", "time"] }
tracing = { workspace = true }
utoipa = { workspace = true }
